Create Footer component, add it to main layout

--- a/CMS/CMS.csproj
+++ b/CMS/CMS.csproj
@@ -20,4 +20,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Components\BlazorComponent\Footer.css" />
+  </ItemGroup>
+
+
 </Project>
