Fixed: .gitignore to be an exact copy of 'master' branch to resolve merge errors

--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,5 @@ CMS/appsettings.json
 # Ignore qodana.yaml file
 qodana.yaml
 
+# Added gitignore itself to fix future issues about mismatching
+.gitignore
