--- a/CMS/CMS.csproj
+++ b/CMS/CMS.csproj
@@ -23,12 +23,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Components\BlazorComponent\ConnectedWebPagesInfo.razor.css" />
     <None Remove="Components\BlazorComponent\Footer.css" />
     <None Remove="Components\Pages\WebSitePages\Index.css" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Remove="Services\GetCurrentUserIdService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Components\BlazorComponent\ConnectedWebPagesInfo.razor.css" />
   </ItemGroup>
 
 
